gitops/apps/rhcl-demo/base/resources/apps/demo-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api
  namespace: demo
  labels:
    app: demo-api
    version: v1
  annotations:
    argocd.argoproj.io/sync-wave: "12"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-api
  template:
    metadata:
      labels:
        app: demo-api
        version: v1
    spec:
      containers:
        - name: demo-api
          image: quay.io/kuadrant/authorino-examples:talker-api
          ports:
            - containerPort: 3000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: demo
  labels:
    app: demo-api
  annotations:
    argocd.argoproj.io/sync-wave: "12"
spec:
  selector:
    app: demo-api
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
