gitops/apps/rhcl-demo/base/resources/apps/external-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-proxy
  namespace: demo
  labels:
    app: external-proxy
    version: v1
  annotations:
    argocd.argoproj.io/sync-wave: "12"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-proxy
  template:
    metadata:
      labels:
        app: external-proxy
        version: v1
      annotations:
        rhcl-demo/external-proxy-config: "espn-v2"
    spec:
      containers:
        - name: nginx
          image: registry.redhat.io/ubi10/nginx-126:10.1
          command: ["nginx"]
          args: ["-g", "daemon off;"]
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: cfg
              mountPath: /opt/app-root/etc/nginx.default.d
              readOnly: true
      volumes:
        - name: cfg
          configMap:
            name: external-proxy-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: external-proxy
  namespace: demo
  annotations:
    argocd.argoproj.io/sync-wave: "12"
spec:
  selector:
    app: external-proxy
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
